feat: add traineer jwt
